<resources>
    <string name="app_name">daangn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">홈</string>
    <string name="title_community">동네생활</string>
    <string name="title_near">내 근처</string>
    <string name="title_chat">채팅</string>
    <string name="title_mypage">나의 당근</string>
</resources>