<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/title_home" />
    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_community_selector"
        android:title="@string/title_community" />
    <item
        android:id="@+id/nearFragment"
        android:icon="@drawable/ic_near_selector"
        android:title="@string/title_near" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat_selector"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/mypageFragment"
        android:icon="@drawable/ic_mypage_selector"
        android:title="@string/title_mypage" />
</menu>